2010-06-23 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: enable profile handling options
 * PyGC/PyGC/IO/GC_profile.py: copied from PyCF, ported to use numpy
 * PyGC/PyGC/IO/GC_loadfile.py: use scipy for interpolation
 * PyGC/PyGC/IO/GC_netcdf.py: make variables sized
 * PyGC/PyGC/IO/GC_readlines.py: read a file ignoring comments
 * PyGC/PyGC/IO/Makefile.am: handle new files
 * PyGC/PyGC/IO/__init__.py: import new files
 * PyGC/progs/Makefile.am: handle new program
 * PyGC/progs/plotGCProfile: new program for plotting profiles
 * PyGC/progs/plotGCvar: add option to plot profile positions

2010-06-14 Magnus Hagdorn
 * make.rules.in: enable rule to build graphics
 * PyGC/PyGC/GC_options.py: all arguments are actually input files
 * PyGC/PyGC/IO/GC_loadfile.py: use the shape attribute to figure out length
   of dimension variables
 * PyGC/data/eismint2.data: data from published EISMINT2 experiments
 * PyGC/data/Makefile.am: distribute new file
 * PyGC/progs/plotEISMINT2stats: new program to plot EISMINT2 statistics
 * PyGC/progs/Makefile.am: distribute new program
 * tests/EISMINT/EISMINT-2/Makefile.am: use new program to generate comparision
   graphs

2010-06-10 Magnus Hagdorn
 * PyGC/PyGC/IO/GC_createfile.py: use new wrapper class to access netCDF files
 * PyGC/PyGC/IO/GC_loadfile.py: ditto
 * PyGC/PyGC/IO/GC_file.py: avoid losing useful error message
 * PyGC/PyGC/IO/GC_netcdf.py: wrap NetCDFFile class to enable automatic masking
   and scaling of variables
 * PyGC/PyGC/IO/GC_proj.py: Scientific.IO.NetCDF stores all numeric attributes
   as arrays, netcdf4 does not. Use numpy to reduce dimensionality of attribute
   arrays with a single element.

2010-05-31 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: tidy up, handle plot size
 * PyGC/progs/plotGCvar: handle plot size

2010-05-31 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: add option to disable plotting of geographic coord
   system
 * PyGC/progs/plotGCvar: rearrange code, make clipping work (more or less)
